--- a/StartTrip/src/main/webapp/WEB-INF/web.xml
+++ b/StartTrip/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,16 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/springroot.xml</param-value>
   </context-param>
+  <filter>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+    	<param-name>encoding</param-name>
+    	<param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>CharacterEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
