--- a/StartTrip/src/main/webapp/WEB-INF/web.xml
+++ b/StartTrip/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,13 @@
     <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <security-constraint>
+   <web-resource-collection>
+   <web-resource-name>JSP/Servelt Example</web-resource-name>
+      <url-pattern>/*</url-pattern>
+   </web-resource-collection>
+   <user-data-constraint>
+      <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+   </user-data-constraint>
+</security-constraint>
 </web-app>
